# safe_user

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: safe_user.yml
scripts/: database.sql
src/: auth.rs  db.rs  handler.rs  handlers.rs  lib.rs  main.rs  models.rs
tests/: handler_integration_tests.rs
