[package]
name = "safe_user"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-web-httpauth = "0.8.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = {version = "0.6.2",features = ["runtime-tokio-rustls", "macros", "mssql", "chrono", "uuid","decimal"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.3.0"
dotenv = "0.15"
chrono = "0.4"
uuid = { version = "1", features = ["serde", "v4"] }
rust_decimal = { version = "1.28", features = ["serde"] }
